# rahsia

./: Dockerfile  README.md  openapi.yaml  pyproject.toml
.github/workflows/: container-image.yaml
js/: package-lock.json  package.json
js/public/: index.html
js/src/: Api.js  App.css  App.js  Forms.js  List.js
js/src/components/ui/: toaster.jsx
manifests/: clusterrole.yaml  deployment.yaml  example.yaml  kustomization.yaml  service.yaml  serviceaccount.yaml
manifests/crd/: SecretRequest.yaml
rahsia/: __init__.py
rahsia/apis/: k8s.py  secrets_api.py  secrets_api_base.py
rahsia/impl/: __init__.py
rahsia/models/: http.py  k8s.py  secret.py  secret_field.py  secret_request.py  secrets_request.py
